# zkv

./: Cargo.toml  README.md
cli/: Cargo.toml
core/: Cargo.toml
core/src/: controller.rs  fs.rs  lib.rs  primitives.rs  worker.rs
