[workspace]
members = ["core", "cli"]

[workspace.dependencies]
twox-hash = "1.6.3"
serde = { version = "1.0.198", features = ["derive"] }

xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }

uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde", "v7"] }
crossbeam-channel = "0.5"
serde_json = "1.0.125"                # A JSON serialization file format
log = "0.4.22"                             # A lightweight logging facade for Rust 