[package]
name = "zkv-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
twox-hash = { workspace = true }
xxhash-rust = { workspace = true }
uuid = { workspace = true }
crossbeam-channel = { workspace = true }
serde_json = { workspace = true }
